mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mongo-express-deployment","namespace":"pipeline"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mongo-express"}},"template":{"metadata":{"labels":{"app":"mongo-express"}},"spec":{"containers":[{"env":[{"name":"ME_CONFIG_MONGODB_ENABLE_ADMIN","value":"true"},{"name":"ME_CONFIG_MONGODB_AUTH_DATABASE","value":"admin"},{"name":"ME_CONFIG_BASICAUTH_USERNAME","value":"root"},{"name":"ME_CONFIG_BASICAUTH_PAS [...]
  creationTimestamp: "2025-03-31T01:23:17Z"
  generation: 8
  name: mongo-express-deployment
  namespace: pipeline
  resourceVersion: "119796814"
  uid: 96e545c3-ecca-4b84-84bc-ddaadebf410b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongo-express
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongo-express
    spec:
      containers:
      - env:
        - name: ME_CONFIG_MONGODB_URL
          value: mongodb://root:1qaz%40WSX@mongo-svc-1:27017,mongo-svc-2:27017,mongo-svc-3:27017/pipeline?serverSelectionTimeoutMS=1000&connectTimeoutMS=1000&authSource=admin&readPreference=secondary
        - name: ME_CONFIG_MONGODB_ENABLE_ADMIN
          value: "false"
        - name: ME_CONFIG_MONGODB_AUTH_DATABASE
          value: admin
        - name: ME_CONFIG_BASICAUTH_USERNAME
          value: root
        - name: ME_CONFIG_BASICAUTH_PASSWORD
          value: 1qaz@WSX
        image: mongo-express:latest
        imagePullPolicy: Always
        name: mongo-express
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-03-31T03:16:51Z"
    lastUpdateTime: "2025-03-31T03:16:51Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-03-31T01:23:17Z"
    lastUpdateTime: "2025-03-31T03:18:27Z"
    message: ReplicaSet "mongo-express-deployment-84d64cd6dc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
