mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"mongo-express-ingress","namespace":"pipeline"},"spec":{"ingressClassName":"nginx","rules":[{"host":"pipe-dev-mongo.metaage.com.tw","http":{"paths":[{"backend":{"service":{"name":"mongo-express-service","port":{"number":8081}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2025-03-31T01:23:17Z"
  generation: 1
  name: mongo-express-ingress
  namespace: pipeline
  resourceVersion: "119766072"
  uid: 72eb8dd8-f60a-40ba-b16c-c0a35b6fc9b1
spec:
  ingressClassName: nginx
  rules:
  - host: pipe-dev-mongo.metaage.com.tw
    http:
      paths:
      - backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.9.58.98
