mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mongo-express-service","namespace":"pipeline"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8081}],"selector":{"app":"mongo-express"}}}
  creationTimestamp: "2025-03-31T01:23:17Z"
  name: mongo-express-service
  namespace: pipeline
  resourceVersion: "119765963"
  uid: 5733ce87-38e6-48bd-9a86-dd8f73f0a290
spec:
  clusterIP: 10.101.180.75
  clusterIPs:
  - 10.101.180.75
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: mongo-express
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
