pma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: twm-cloud
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
